[project]
name = "ZeroCacheX"
version = "0.0.1"
description = "Ultra Fast Memory Cache, ttl lfu mru lru"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "m00263277@gmail.com"}
]
dependencies = []

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["cachx"]
